[package]
name = "blog"
version = "0.1.0"
authors = ["Songday <songday@yeah.net>"]
edition = "2018"

[lib]
name = "blog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
lazy-static-include = "2.2.2"
parking_lot = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.32"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
