[package]
name = "blog"
version = "0.1.0"
authors = ["Songday <songday@yeah.net>"]
edition = "2018"

[lib]
name = "blog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
lazy_static = "1.4.0"
lazy-static-include = "2.2.2"
rand = "0.7"
parking_lot = "0.10"
uuid = { version = "0.8", features = ["v5"] }
subtle = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.32"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite"] }
scrypt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
