[package]
name = "blog"
version = "0.1.0"
authors = ["Songday <songday@yeah.net>"]
edition = "2018"

[lib]
name = "blog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
ctrlc = { version = "3.0", features = ["termination"] }
image = "0.23.6"
lazy_static = "1.4.0"
lazy-static-include = "2.2.2"
parking_lot = "0.10"
rand = "0.7"
subtle = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.32"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite"], optional = false }
scrypt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.8", features = ["v5"] }
warp = "0.2"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
# https://doc.rust-lang.org/reference/conditional-compilation.html
[target.'cfg(target_env = "gnu")'.dependencies]
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic